update footer padding and footer p

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </table>
     </section>
     <footer>
-      <p>Sitio Desarrollado por Felipe Osorio B.</p>
+      <p>Sitio Web Desarrollado por Felipe Osorio B.</p>
       <p>
         <a href="https://www.behance.net/Rockketz" target="_blank">
           Rockketz
